single VerifyWorkflowOutput for Runs/Omex, simplified REST API
