# biosim_server/biosim_verify/models.py
@@ -1,6 +1,9 @@
+from enum import StrEnum
 from typing import Optional
 
 from pydantic import BaseModel
+
+from biosim_server.biosim_runs import BiosimSimulationRun, HDF5File, Hdf5DataValues
 
 
 class ComparisonStatistics(BaseModel):
@@ -21,6 +24,7 @@ class CompareSettings(BaseModel):
     abs_tol_scale: float
     observables: Optional[list[str]] = None
 
+
 # class CompareReport(BaseModel):
 #     omex_file: OmexFile
 #     simulator1: BiosimulatorVersion
@@ -31,3 +35,45 @@ class CompareSettings(BaseModel):
 #     simRun1: BiosimSimulationRun
 #     simRun2: BiosimSimulationRun
 #     equivalent: bool
+
+class SimulationRunInfo(BaseModel):
+    biosim_sim_run: BiosimSimulationRun
+    hdf5_file: HDF5File
+
+
+
+class RunData(BaseModel):
+    run_id: str
+    dataset_name: str
+    var_names: list[str]  # list of variables found this run for this dataset
+    data: Hdf5DataValues  # n-dim array of data for this run, shape=(len(dataset_vars), len(times))
+
+
+
+class GenerateStatisticsActivityOutput(BaseModel):
+    sims_run_info: list[SimulationRunInfo]
+    comparison_statistics: dict[str, list[list[ComparisonStatistics]]]  # matrix of comparison statistics per dataset
+    sim_run_data: Optional[list[RunData]] = None
+
+
+class VerifyWorkflowStatus(StrEnum):
+    PENDING = "PENDING"
+    IN_PROGRESS = "IN_PROGRESS"
+    COMPLETED = "COMPLETED"
+    FAILED = "FAILED"
+    RUN_ID_NOT_FOUND = "RUN_ID_NOT_FOUND"
+
+    @property
+    def is_done(self) -> bool:
+        return self in [VerifyWorkflowStatus.COMPLETED, VerifyWorkflowStatus.FAILED,
+                        VerifyWorkflowStatus.RUN_ID_NOT_FOUND]
+
+
+class VerifyWorkflowOutput(BaseModel):
+    workflow_id: str
+    compare_settings: CompareSettings
+    workflow_status: VerifyWorkflowStatus
+    timestamp: str
+    workflow_run_id: Optional[str] = None
+    workflow_error: Optional[str] = None
+    workflow_results: Optional[GenerateStatisticsActivityOutput] = None
